--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
 				<div class="performance-group">
 					<span class="text" id="combo">0</span>
-					<span class="subtext" id="fullcombo">Full</span>
-					<span class="subtext">Combo</span>
+					<span class="subtext" id="combolabel">Full Combo</span>
 				</div>
 				
 				<span id="score">0</span>
