PP counting should work

--- a/index.html
+++ b/index.html
@@ -59,20 +59,19 @@
 		<div id="pprank">
 			<div class="rank-group">
 				<span class="title">WORLD RANK</span>
-				<span class="subtext" id="worldRank"></span>
+				<span class="subtext" id="worldRank">0</span>
 			</div>
 			<div class="rank-group">
 				<span class="title">COUNTRY RANK</span>
-				<span class="subtext" id="countryRank"></span>
+				<span class="subtext" id="countryRank">0</span>
 			</div>
 			<div class="rank-group">
 				<span class="title">PP</span>
-				<span class="subtext" id="pp"></span>
+				<span class="subtext" id="pp1">0</span><span class="subtext">.</span><span class="subtext" id="pp2">0</span>
 			</div>
 		</div>
 
 		<script src="./js/options.js"></script>
-
 		<script src="./js/ui.js"></script>
 		<script src="./js/events.js"></script>
 		<script src="./js/manager.js"></script>
